<resources>
    <string name="app_name">Prova A3 - Leandro Ribeiro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_adicionar">AdicionarActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_adicionar2">Adicionar2Activity</string>
    <string name="no_gps_no_app">Sem o GPS o aplicativo não funciona</string>
    <string name="voltar">Voltar</string>
    <string name="salvar">Salvar</string>
    <string name="descri_o">Descrição</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="adicionar_local">Adicionar Local</string>
    <string name="adicionar">Adicionar</string>
    <string name="main_titulo">Por onde andei...</string>
</resources>