<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.AdicionarActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/purple_500">

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11pt"
                android:layout_marginTop="14pt"
                android:layout_marginRight="11pt"
                android:text="@string/adicionar_local"
                android:background="@color/purple_700"
                android:textAlignment="center"
                android:textSize="12pt"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewLatitudeTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_weight="2"
                    android:layout_marginLeft="36dp"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/latitude"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/textViewLongitudeTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_marginRight="36dp"
                    android:text="@string/longitude"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLatitude" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_weight="2"
                    android:layout_marginLeft="36dp"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/textViewLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_marginRight="36dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLatitude" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextDescricao"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="36dp"
                android:background="@color/purple_500"
                android:hint="@string/descri_o"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLongitude" />


            <Button
                android:id="@+id/buttonConfirmar"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="63dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="63dp"
                android:background="@color/purple_200"
                android:text="@string/salvar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:onClick="completarCadastro"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescricao" />

            <Button
                android:id="@+id/buttonVoltar"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="63dp"
                android:layout_marginRight="63dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="23dp"
                android:background="@color/purple_700"
                android:text="@string/voltar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:onClick="voltarHome"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonConfirmar"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>